# task-gateway

./: .dockerignore  .env.production  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: create_release.yml  pull-request.yml
config/: development.toml
docker-compose/: .env.task-gateway  docker-compose.yaml
docker-compose/config/: development.toml
docker-compose/rabbitmq/: definitions.json  rabbitmq.conf
docs/: Context.drawio
src/: config.rs  errors.rs  logger.rs
src/modules/: mod.rs
src/modules/broker/: config.rs  errors.rs  mod.rs
src/modules/broker/models/: mod.rs
src/modules/broker/rabbitmq/: core.rs  errors.rs  mod.rs
src/modules/llm_provider/: config.rs  errors.rs  mod.rs
src/modules/llm_provider/grok/: service.rs
src/modules/llm_provider/grok/models/: mod.rs  requests.rs  responses.rs
src/modules/llm_provider/models/: generation_models.rs  image_editing.rs  image_generation.rs  mod.rs
src/modules/llm_provider/openai/: errors.rs  service.rs
src/modules/llm_provider/openai/models/: mod.rs  requests.rs  responses.rs
src/modules/llm_provider/openrouter/: mod.rs  service.rs
src/modules/llm_provider/openrouter/models/: requests.rs  responses.rs
src/server/: config.rs  errors.rs  mod.rs  swagger.rs
src/server/router/: mod.rs  models.rs  utils.rs
src/server/router/broker/: mod.rs  publish_message.rs
src/server/router/llm_provider/: image_editing.rs  image_generation.rs  mod.rs
tests/: broker_models.rs  publish_message_handler.rs  router_models.rs
