[package]
name = "task-gateway"
version = "1.0.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
anyhow = "1.0.102"
config = "0.15.22"
derive_builder = "0.20.2"
dotenv = "0.15.0"
metrics-exporter-prometheus = "0.18.1"
axum-prometheus = "0.10.0"
axum-tracing-opentelemetry = "0.33.1"
thiserror = "2.0.18"
serde_json = "1.0.145"
getset = "0.1.6"
tracing = "0.1"
serde_derive = "1.0.228"
regex = "1.12.2"
tracing-loki = "0.2.6"
tracing-subscriber = "0.3.23"
console-subscriber = "0.5.0"
base64 = "0.22.1"
tokio-util = "0.7.18"
retry = "2.0"
rstest = "0.26.1"
serial_test = "3.4.0"
lapin = "4.3.0"

[dependencies.chrono]
version = "0.4.44"
features = ["serde"]

[dependencies.tokio]
version = "1.50.0"
features = ["full"]

[dependencies.tower-http]
version = "0.6.5"
features = ["trace", "cors"]

[dependencies.utoipa]
version = "5.4.0"
features = ["axum_extras", "chrono"]

[dependencies.backon]
version = "1"
features = ["tokio-sleep", "futures-timer-sleep"]

[dependencies.utoipa-swagger-ui]
version = "9"
features = ["axum"] 

[dependencies.uuid]
version = "1.22.0"
features = [
    "v4", 
    "serde"
]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.axum]
version = "0.8.6"
features = ["multipart"]

[dependencies.reqwest]
version = "0.13.2"
features = ["json", "socks"] 




